Fixed form label alignment and button padding

--- a/app/assets/stylesheets/devise.scss
+++ b/app/assets/stylesheets/devise.scss
@@ -29,6 +29,7 @@ Join:
 }
 
 .devise-field {
+	text-align: left;
 	label {
 		font-size: 20px;
 		color: $purple;
@@ -58,6 +59,7 @@ Join:
 		font-weight: bold;
 		border: none;
 		color: white;
+		padding-bottom: 5px;
 	}
 }
 
